# Test-task-AO-NIKIET

./: CMakeLists.txt  README.md  build.sh  consumer.sh  producer.sh
src/: consumer.cpp  producer.cpp
